# TierFlow

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
config/: config.yaml  models.yaml  models_proxy.yaml
docs/: COMPLETION_MECHANISM.md  MODEL_CONFIGURATION.md  SKILLS_SYSTEM.md
src/: __init__.py  main.py
src/api_clients/: __init__.py  base.py  claude.py  deepseek.py  factory.py  gpt.py
src/config/: __init__.py  models.py  settings.py
src/execution/: __init__.py  codex.py
src/monitoring/: __init__.py  health.py
src/orchestration/: __init__.py  completion.py  configurable.py  orchestrator.py  skill_aware.py
src/skills/: __init__.py  base.py  builtin.py
src/state/: __init__.py  manager.py
src/utils/: logger.py
