[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tierflow"
version = "0.1.0"
description = "Two-tier agent workflow system with skills support"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.54.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "ratelimit>=2.2.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
tierflow = "src.main:cli"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
